--- a/memo/src/App.css
+++ b/memo/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+.body {
+    margin: 0;
+    font-family: dnp-shuei-mgothic-std, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 17px;
+    line-height: 18.7px;
+    font-weight: 400;
+    color: #231815;
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.textarea-field {
+    height: 70%;
+    width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.textarea {
+    height: 100%;
+    width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.speech-area {
+    height: 30%;
+    width: 100%;
+    background-color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.text {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0 20px 10px 20px;
+    line-height: 1.5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.5;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    color: #231815;
+    border-radius: 10px;
+}
+
+.btn-orange {
+    color: #fff;
+    background-color: #eb6100;
+    margin: 15px 30px 15px 15px;
 }
